--- a/func.yaml
+++ b/func.yaml
@@ -1,15 +1,15 @@
 specVersion: 0.25.0
 name: node-fn
-namespace: default
+namespace: test-ns
 runtime: node
-registry: image-registry.openshift-image-registry.svc:5000/default
-image: image-registry.openshift-image-registry.svc:5000/default/node-fn:latest
+registry: image-registry.openshift-image-registry.svc:5000/test-ns
+image: image-registry.openshift-image-registry.svc:5000/test-ns/node-fn:latest
 imageDigest: ""
 build: git
 git:
   url: https://github.com/jrangelramos/node-fn.git
 buildpacks: []
-builder: pack
+builder: s2i
 volumes: []
 buildEnvs:
 - name: foo
