--- a/func.yaml
+++ b/func.yaml
@@ -8,7 +8,7 @@ imageDigest: ""
 build: git
 git:
   url: https://github.com/jrangelramos/node-fn.git
-  branch: ns/test-ns
+  revision: ns/test-ns
 buildpacks: []
 builder: s2i
 volumes: []
